# OpenGLDemo

./: CMakeLists.txt
Project/demo/: CMakeLists.txt  main.cpp
include/Assimp/: defs.h
lib/: SOIL.lib  assimp-vc142-mtd.lib  freeglut_staticd.lib  freeglutd.lib  glfw3.lib
src/MLIB/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h
src/Model/Hutao/: Hutao.pmx
src/Shader/: fragment.frag
